syntax = "proto3";
package cosmos.clerk.v1beta1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/types/validator.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/0xPolygon/heimdall-v2/x/clerk/types";

// GenesisState defines the clerk module's genesis state.
message GenesisState {
  repeated EventRecord event_records = 1
      [ (gogoproto.nullable) = true, (amino.dont_omitempty) = true ];

  repeated string record_sequences = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

message EventRecord {
  option (amino.name) = "clerk/EventRecord";
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  uint64 i_d = 1;
  string contract = 2 [
    (amino.dont_omitempty) = true,
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
  cosmos.types.HexBytes data = 3;
  cosmos.types.HeimdallHash tx_hash = 4;
  uint64 log_index = 5;
  string bor_chain_i_d = 6;
  google.protobuf.Timestamp record_time = 7;
}